<resources>
    <string name="nombreapp">PQR</string>
    <string name="minombre">Manuel Ardila</string>
    <string name="registro">Registrate</string>
    <string name="comienza">Comienza</string>
    <string name="ingresa">Ingresa</string>
    <string name="recupera_contrasena">Recupera Tu Contraseña</string>
    <string name="nueva_aventura">inicia una nueva aventura con pqr y descubre una nueva forma de ver el mundo</string>
    <string name="aventura">La aventura esta por iniciar, por favor inicia sesion</string>
    <string name="ingresa_google">Ingresa con Google</string>
    <string name="no_cuenta">No tienes cuenta?</string>
    <string name="recucontra">Para recuperar la contraseña se necesita un correo previamente registrado</string>
    <string name="ingresar">Ingresar</string>
    <string name="iniciar_sesi_n_con_google">Iniciar sesión con Google</string>
    <string name="contrase_a">Contraseña</string>
    <string name="email">Email</string>
    <string name="para_recuperar_la_contrase_a_se_necesita_un_correo_previamente_registrado">Para recuperar la contraseña se necesita un correo previamente registrado</string>
    <string name="confirmar">Confirmar</string>
    <string name="para_registrarse_tendra_que_llenar_los_siguietes_espacios">Para registrarse tendra que llenar los siguietes espacios</string>
    <string name="terminos_y_condiciones">Terminos y condiciones</string>
    <string name="registrarse">Registrarse</string>
    <string name="realizar_cambios">Realizar Cambios</string>
    <string name="regresar">Regresar</string>
    <string name="nombre_del_producto">Nombre del Producto</string>
    <string name="descripci_n_del_producto">Descripción del producto</string>
    <string name="agregar_al_carrito">Agregar al Carrito</string>
    <string name="eliminar">Eliminar</string>
    <string name="bienvenido_a_pqr_una_tienda_de_alta_gama_aqu_encontrar_s_productos_de_buena_calidad_a_buen_precio">¡Bienvenido a PQR! Una tienda de alta gama, Aquí encontrarás productos de buena calidad a buen precio.</string>
    <string name="explorar_men">Explorar Menú</string>
    <string name="_2025_pqr_todos_los_derechos_reservados">© 2025 PQR. Todos los derechos reservados.</string>
    <string name="cont_ctanos_soporte_pqrapp_com">Contáctanos: soporte@PqrApp.com</string>
    <string name="pagar">Pagar</string>
</resources>